--- a/Fichas/Tormenta/TRPG/2.lfm
+++ b/Fichas/Tormenta/TRPG/2.lfm
@@ -375,8 +375,8 @@
 		
 	</scrollBox>
 	<dataLink fields="{'outrosacrobacia', 'outrosadestrar', 'outrosatletismo', 'outrosatuacao1', 'outrosatuacao2', 'outroscavalgar', 'outrosconhecimento1', 'outrosconhecimento2', 'outroscura', 'outrosdiplomacia', 'outrosenganacao', 'outrosfurtividade', 'outrosimagia', 'outrosiniciativa', 'outrosintimidacao', 'outrosintuicao', 'outrosladinagem', 'outrosoinformacao', 'outrosoficio1', 'outrosoficio2', 'outrospercepcao', 'outrossobrevivencia', 'cbxacrobacia', 'cbxadestrar', 'cbxatletismo', 'cbxatuacao1', 'cbxatuacao2', 'cbxcavalgar', 'cbxconhecimento1', 'cbxconhecimento2', 'cbxcura', 'cbxdiplomacia', 'cbxenganacao', 'cbxfurtividade', 'cbximagia', 'cbxiniciativa', 'cbxintimidacao', 'cbxintuicao', 'cbxladinagem', 'cbxoinformacao', 'cbxoficio1', 'cbxoficio2', 'cbxpercepcao', 'cbxsobrevivencia', 'forca', 'modforca', 'destreza', 'moddestreza', 'constituicao', 'modconstituicao', 'inteligencia', 'modinteligencia', 'sabedoria', 'modsabedoria', 'carisma', 'modcarisma', 'nivel'}">
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modacrobacia = sheet.moddestreza or 0;
 				if self.cbxacrobacia.checked then
 					sheet.gradacrobacia = (math.floor((sheet.nivel)+3 or 0));
@@ -387,8 +387,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modadestrar = sheet.modcarisma or 0;
 				if self.cbxadestrar.checked then
 					sheet.gradadestrar = (math.floor((sheet.nivel)+3 or 0));
@@ -399,8 +399,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modatletismo = sheet.modforca or 0;
 				if self.cbxatletismo.checked then
 					sheet.gradatletismo = (math.floor((sheet.nivel)+3 or 0));
@@ -411,8 +411,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modatuacao1 = sheet.modcarisma or 0;
 				if self.cbxatuacao1.checked then
 					sheet.gradatuacao1 = (math.floor((sheet.nivel)+3 or 0));
@@ -423,8 +423,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modatuacao2 = sheet.modcarisma or 0;
 				if self.cbxatuacao2.checked then
 					sheet.gradatuacao2 = (math.floor((sheet.nivel)+3 or 0));
@@ -435,8 +435,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modcavalgar = sheet.moddestreza or 0;
 				if self.cbxcavalgar.checked then
 					sheet.gradcavalgar = (math.floor((sheet.nivel)+3 or 0));
@@ -447,8 +447,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modconhecimento1 = sheet.modinteligencia or 0;
 				if self.cbxconhecimento1.checked then
 					sheet.gradconhecimento1 = (math.floor((sheet.nivel)+3 or 0));
@@ -459,8 +459,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modconhecimento2 = sheet.modinteligencia or 0;
 				if self.cbxconhecimento2.checked then
 					sheet.gradconhecimento2 = (math.floor((sheet.nivel)+3 or 0));
@@ -471,8 +471,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modcura = sheet.modsabedoria or 0;
 				if self.cbxcura.checked then
 					sheet.gradcura = (math.floor((sheet.nivel)+3 or 0));
@@ -483,8 +483,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.moddiplomacia = sheet.modcarisma or 0;
 				if self.cbxdiplomacia.checked then
 					sheet.graddiplomacia = (math.floor((sheet.nivel)+3 or 0));
@@ -495,8 +495,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modenganacao = sheet.modcarisma or 0;
 				if self.cbxenganacao.checked then
 					sheet.gradenganacao = (math.floor((sheet.nivel)+3 or 0));
@@ -507,8 +507,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modfurtividade = sheet.moddestreza or 0;
 				if self.cbxfurtividade.checked then
 					sheet.gradfurtividade = (math.floor((sheet.nivel)+3 or 0));
@@ -519,8 +519,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modimagia = sheet.modinteligencia or 0;
 				if self.cbximagia.checked then
 					sheet.gradimagia = (math.floor((sheet.nivel)+3 or 0));
@@ -531,8 +531,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modiniciativa = sheet.moddestreza or 0;
 				if self.cbxiniciativa.checked then
 					sheet.gradiniciativa = (math.floor((sheet.nivel)+3 or 0));
@@ -543,8 +543,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modintimidacao = sheet.modcarisma or 0;
 				if self.cbxintimidacao.checked then
 					sheet.gradintimidacao = (math.floor((sheet.nivel)+3 or 0));
@@ -555,8 +555,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modintuicao = sheet.modsabedoria or 0;
 				if self.cbxintuicao.checked then
 					sheet.gradintuicao = (math.floor((sheet.nivel)+3 or 0));
@@ -567,8 +567,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modladinagem = sheet.moddestreza or 0;
 				if self.cbxladinagem.checked then
 					sheet.gradladinagem = (math.floor((sheet.nivel)+3 or 0));
@@ -579,8 +579,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modoinformacao = sheet.modcarisma or 0;
 				if self.cbxoinformacao.checked then
 					sheet.gradoinformacao = (math.floor((sheet.nivel)+3 or 0));
@@ -591,8 +591,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modoficio1 = sheet.modinteligencia or 0;
 				if self.cbxoficio1.checked then
 					sheet.gradoficio1 = (math.floor((sheet.nivel)+3 or 0));
@@ -603,8 +603,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modoficio2 = sheet.modinteligencia or 0;
 				if self.cbxoficio2.checked then
 					sheet.gradoficio2 = (math.floor((sheet.nivel)+3 or 0));
@@ -615,8 +615,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modpercepcao = sheet.modsabedoria or 0;
 				if self.cbxpercepcao.checked then
 					sheet.gradpercepcao = (math.floor((sheet.nivel)+3 or 0));
@@ -627,8 +627,8 @@
 				end;
 			end;
 		</event>
-		<event name="onPersistedChange">
-			if sheet.calculos == false then
+		<event name="onChange">
+			if self.calculos.checked == false then
 				sheet.modsobrevivencia = sheet.modsabedoria or 0;
 				if self.cbxsobrevivencia.checked then
 					sheet.gradsobrevivencia = (math.floor((sheet.nivel)+3 or 0));
@@ -642,7 +642,7 @@
 	</dataLink>
 	<script>
 		function desCalculos2()
-			if sheet.calculos then
+			if self.calculos.checked then
 				self.totalacrobacia.hitTest = false;
 				self.gradacrobacia.hitTest = false;
 				self.modacrobacia.hitTest = false;
