--- a/Fichas/Tormenta/TRPG/1.lfm
+++ b/Fichas/Tormenta/TRPG/1.lfm
@@ -367,7 +367,7 @@
 		<rectangle left="41" top="121" color="Gainsboro" width="42" height="15" xradius="2" yradius="2"/>
 		<label left="43" top="122" width="75" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Funções"/>
 		<rectangle left="3" top="131" color="#333333" width="119" height="25"/>
-		<imageCheckBox field="calculos" left="14" top="136" checkedImage="img/xis.png" uncheckedImage="img/Cal.png" width="15" height="15" hint="Desabilita os cálculos automáticos da ficha." onClick="desCalculos(); desCalculos2();"/>
+		<imageCheckBox name="calculos" field="calculos" left="14" top="136" checkedImage="img/xis.png" uncheckedImage="img/Cal.png" width="15" height="15" hint="Desabilita os cálculos automáticos da ficha." onClick="desCalculos(); desCalculos2();"/>
 		<imageCheckBox field="acuidade" left="34" top="136" checkedImage="img/hand.png" uncheckedImage="img/closedhand.png" hint="Muda o modificador em jogadas de ataque corpo-a-corpo. FOR ou DES." width="15" height="15"/>
 		<imageCheckBox field="pontaria" left="54" top="136" checkedImage="img/wisdom.png" uncheckedImage="img/bow.png" hint="Muda o modificador em jogadas de ataque à distância. DES ou SAB." width="15" height="15"/>
 		<image left="74" top="136" name="update" src="img/update.gif" width="15" height="15"/>
@@ -375,17 +375,17 @@
 	</layout>
 	</scrollBox>
 	<dataLink fields="{'forca', 'destreza', 'constituicao', 'inteligencia', 'sabedoria', 'carisma', 'ca1', 'ca2', 'ca3', 'ca4', 'ca5', 'fort1', 'fort2', 'fort3', 'ref1', 'ref2', 'ref3', 'von1', 'von2', 'von3', 'acuidade', 'modforca', 'cac1', 'cac2', 'cac3', 'cac4', 'pontaria', 'bba', 'dis1', 'dis2', 'dis3', 'dis4', 'nvclasse1', 'nvclasse2', 'nvclasse3', 'nvclasse4', 'nvclasse5', 'nvclasse6', 'nvclasse7', 'nvclasse8', 'nvclasse9', 'nvclasse10'}">
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Calculo de nivel e metade de nivel.
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				sheet.nivel = (math.floor((sheet.nvclasse1)or 0)+math.floor((sheet.nvclasse2)or 0)+math.floor((sheet.nvclasse3)or 0)+math.floor((sheet.nvclasse4)or 0)+math.floor((sheet.nvclasse5)or 0)+math.floor((sheet.nvclasse6)or 0)+math.floor((sheet.nvclasse7)or 0)+math.floor((sheet.nvclasse8)or 0)+math.floor((sheet.nvclasse9)or 0)+math.floor((sheet.nvclasse10)or 0));
 				sheet.metadenivel = math.floor(sheet.nivel / 2 or 0);
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Modificador de Habilidades
 			-- Forca
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				local modfor = math.floor(((sheet.forca or 10) / 2) - 5);
         		if (modfor >= 0) then
                 	modfor = "+" .. modfor;
@@ -393,9 +393,9 @@
                 sheet.modforca = modfor;
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Destreza
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				local moddes = math.floor(((sheet.destreza or 10) / 2) - 5);
                 if (moddes >= 0) then
                 	moddes = "+" .. moddes;
@@ -403,9 +403,9 @@
                 sheet.moddestreza = moddes;
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Constituicao
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				local modcon = math.floor(((sheet.constituicao or 10) / 2) - 5);
             	if (modcon >= 0) then
                 	modcon = "+" .. modcon;
@@ -413,9 +413,9 @@
                 sheet.modconstituicao = modcon;
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- inteligencia
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				local modint = math.floor(((sheet.inteligencia or 10) / 2) - 5);
             	if (modint >= 0) then
                 	modint = "+" .. modint;
@@ -423,9 +423,9 @@
                 sheet.modinteligencia = modint;
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Sabedoria
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				local modsab = math.floor(((sheet.sabedoria or 10) / 2) - 5);
                 if (modsab >= 0) then
                 	modsab = "+" .. modsab;
@@ -433,9 +433,9 @@
                 sheet.modsabedoria = modsab;
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Carisma
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				local modcar = math.floor(((sheet.carisma or 10) / 2) - 5);
         		if (modcar >= 0) then
                 	modcar = "+" .. modcar;
@@ -443,41 +443,41 @@
                 sheet.modcarisma = modcar;
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Classe de Armadura
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				sheet.ca2 = sheet.moddestreza;
 				sheet.ca1 = (sheet.metadenivel)+10;
 				sheet.totalca = (math.floor((sheet.ca1)or 0)+math.floor((sheet.ca2)or 0)+math.floor((sheet.ca3)or 0)+math.floor((sheet.ca4)or 0)+math.floor((sheet.ca5)or 0));
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Fortitude
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				sheet.fort2 = sheet.modconstituicao;
 				sheet.fort1 = sheet.metadenivel;
 				sheet.totalfort = (math.floor((sheet.fort1)or 0)+math.floor((sheet.fort2)or 0)+math.floor((sheet.fort3)or 0));
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Reflexo
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				sheet.ref2 = sheet.moddestreza;
 				sheet.ref1 = sheet.metadenivel;
 				sheet.totalref = (math.floor((sheet.ref1)or 0)+math.floor((sheet.ref2)or 0)+math.floor((sheet.ref3)or 0));
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Vontade
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				sheet.von2 = sheet.modsabedoria;
 				sheet.von1 = sheet.metadenivel;
 				sheet.totalvon = (math.floor((sheet.von1)or 0)+math.floor((sheet.von2)or 0)+math.floor((sheet.von3)or 0));
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Corpo a corpo
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				if sheet.acuidade then
 					sheet.cac2 = sheet.moddestreza;
 				else
@@ -487,9 +487,9 @@
 				sheet.totalcac = (math.floor((sheet.cac1)or 0)+math.floor((sheet.cac2)or 0)+math.floor((sheet.cac3)or 0)+math.floor((sheet.cac4)or 0));
 			end;
 		</event>
-		<event name="onPersistedChange">
+		<event name="onChange">
 			-- Ataque a distancia.
-			if sheet.calculos == false then
+			if self.calculos.checked == false then
 				if sheet.pontaria then
 					sheet.dis2 = sheet.modsabedoria;
 				else
@@ -502,7 +502,7 @@
 	</dataLink>
 	<script>
 		function desCalculos();
-			if sheet.calculos then
+			if self.calculos.checked then
 
 				self.modforca.hitTest = false;
 				self.moddestreza.hitTest = false;
