--- a/Fichas/Tormenta/TRPG/1.lfm
+++ b/Fichas/Tormenta/TRPG/1.lfm
@@ -250,7 +250,7 @@
 		
 			<rectangle left="185" top="3" color="Gainsboro" width="25" height="15" xradius="2" yradius="2"/>
 			<label left="187" top="5" width="58" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="BBA"/>
-			<edit left="167" top="15" width="60" height="25" field="cac1" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold"/>
+			<edit left="167" top="15" width="60" height="25" field="bba" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold"/>
 		
 			<rectangle left="232" top="20" color="Gainsboro" width="20" height="15" xradius="2" yradius="2"/>
 			<label left="235" top="18" width="20" height="15" fontSize="20" fontStyle="bold" fontColor="black" text="+"/>
@@ -283,7 +283,7 @@
 		<edit left="57" top="15" width="60" height="25" name="totaldis" field="totaldis" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold" hitTest="false"/>
 		<rectangle left="132" top="20" color="Gainsboro" width="20" height="15" xradius="2" yradius="2"/>
 		<label left="135" top="18" width="20" height="15" fontSize="20" fontStyle="bold" fontColor="black" text="="/>
-		<edit left="167" top="15" width="60" height="25" field="dis1" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold"/>
+		<edit left="167" top="15" width="60" height="25" field="bba" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold"/>
 		<rectangle left="232" top="20" color="Gainsboro" width="20" height="15" xradius="2" yradius="2"/>
 		<label left="235" top="18" width="20" height="15" fontSize="20" fontStyle="bold" fontColor="black" text="+"/>
 		<edit left="257" top="15" width="60" height="25" name="dis2" field="dis2" type="number" max="99" horzTextAlign="center" fontSize="15.0" fontStyle="bold" hitTest="false"/>
@@ -368,8 +368,8 @@
 		<label left="43" top="122" width="75" height="8" fontSize="10" fontStyle="bold" fontColor="black" text="Funções"/>
 		<rectangle left="3" top="131" color="#333333" width="119" height="25"/>
 		<imageCheckBox name="calculos" field="calculos" left="14" top="136" checkedImage="img/xis.png" uncheckedImage="img/Cal.png" width="15" height="15" hint="Desabilita os cálculos automáticos da ficha." onClick="desCalculos(); desCalculos2();"/>
-		<imageCheckBox field="acuidade" left="34" top="136" checkedImage="img/hand.png" uncheckedImage="img/closedhand.png" hint="Muda o modificador em jogadas de ataque corpo-a-corpo. FOR ou DES." width="15" height="15"/>
-		<imageCheckBox field="pontaria" left="54" top="136" checkedImage="img/wisdom.png" uncheckedImage="img/bow.png" hint="Muda o modificador em jogadas de ataque à distância. DES ou SAB." width="15" height="15"/>
+		<imageCheckBox name="acuidade" field="acuidade" left="34" top="136" checkedImage="img/hand.png" uncheckedImage="img/closedhand.png" hint="Muda o modificador em jogadas de ataque corpo-a-corpo. FOR ou DES." width="15" height="15"/>
+		<imageCheckBox name="pontaria" field="pontaria" left="54" top="136" checkedImage="img/wisdom.png" uncheckedImage="img/bow.png" hint="Muda o modificador em jogadas de ataque à distância. DES ou SAB." width="15" height="15"/>
 		<image left="74" top="136" name="update" src="img/update.gif" width="15" height="15"/>
 		<button left="74" top="136" width="15" height="15" opacity="0.0" canFocus="false" cursor="handPoint" hint="Baixa a versão mais recente da ficha. Versão instalada: 1.0a" onClick="GUI.openInBrowser('https://github.com/CastielAngels/RRPGFirecast/raw/master/Fichas/Tormenta/output/Tormenta.rpk');"/>
 	</layout>
@@ -478,13 +478,12 @@
 		<event name="onChange">
 			-- Corpo a corpo
 			if self.calculos.checked == false then
-				if sheet.acuidade then
+				if self.acuidade.checked then
 					sheet.cac2 = sheet.moddestreza;
 				else
 					sheet.cac2 = sheet.modforca;
 				end;
-				sheet.cac1 = sheet.bba;
-				sheet.totalcac = (math.floor((sheet.cac1)or 0)+math.floor((sheet.cac2)or 0)+math.floor((sheet.cac3)or 0)+math.floor((sheet.cac4)or 0));
+				sheet.totalcac = (math.floor((sheet.bba)or 0)+math.floor((sheet.cac2)or 0)+math.floor((sheet.cac3)or 0)+math.floor((sheet.cac4)or 0));
 			end;
 		</event>
 		<event name="onChange">
@@ -495,8 +494,7 @@
 				else
 					sheet.dis2 = sheet.moddestreza;
 				end;
-				sheet.dis1 = sheet.bba;
-				sheet.totaldis = (math.floor((sheet.dis1)or 0)+math.floor((sheet.dis2)or 0)+math.floor((sheet.dis3)or 0)+math.floor((sheet.dis4)or 0));
+				sheet.totaldis = (math.floor((sheet.bba)or 0)+math.floor((sheet.dis2)or 0)+math.floor((sheet.dis3)or 0)+math.floor((sheet.dis4)or 0));
 			end;
 		</event>
 	</dataLink>
