--- a/Fichas/Tormenta/TRPG/1.lfm
+++ b/Fichas/Tormenta/TRPG/1.lfm
@@ -389,7 +389,7 @@
 		<event name="onChange">
 			-- Corpo a corpo
 			if self.calculos.checked == false then
-				if self.acuidade.checked then
+				if sheet.acuidade then
 					sheet.cac2 = sheet.moddestreza;
 				else
 					sheet.cac2 = sheet.modforca;
