--- a/Fichas/Tormenta/TRPG/5.lfm
+++ b/Fichas/Tormenta/TRPG/5.lfm
@@ -5,7 +5,7 @@
 		<layout left="10" top="8" width="980" height="300">
 			<rectangle left="448" top="3" color="Gainsboro" width="77" height="28" xradius="2" yradius="2"/>
 			<label left="455" top="6" width="100" height="20" fontSize="18.0" fontStyle="bold" fontColor="black" text="História"/>
-			<richEdit left="10" top="27" backgroundColor="#333333" defaultFontColor="white" field="background" width="970" height="272"/>
+			<richEdit left="10" top="27" backgroundColor="#333333" animateImages="true" defaultFontColor="white" field="background" width="970" height="272"/>
 		</layout>
 		<layout left="21" top="316" width="969" height="358">
 			<rectangle left="86" top="3" color="Gainsboro" width="128" height="28" xradius="2" yradius="2"/>
